More responsive for mobile

--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -6,6 +6,7 @@ html, body {
 body {
 	font-family: "San Francisco", "Helvetica Neue", "Helvetica", "Arial";
 	-webkit-font-smoothing: antialiased;
+	overflow-x: hidden;
 }
 
 a {
