--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -158,3 +158,31 @@
         }
     }
 }
+.upload-button-container {
+    width: 40px;
+    height: 40px;
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+    overflow: hidden;
+    background-color: $brand-color;
+    border-radius: 25px;
+    text-indent: 13px;
+    transition: .2s linear width, .2s linear background-color;
+    box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.6);
+    &:hover {
+        background-color: darken($brand-color, 10%);
+    }
+    .upload-btn {
+        width: 100%;
+        height: 40px;
+        color: #fff;
+        font-size: 15px;
+        line-height: 37px;
+    }
+     span {
+        font-size: 23px;
+        position: relative;
+        top: 2px;
+    }
+}
