--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -170,8 +170,13 @@
     text-indent: 13px;
     transition: .2s linear width, .2s linear background-color;
     box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.6);
+    z-index: 1;
     &:hover {
         background-color: darken($brand-color, 10%);
+        width: 146px;
+    }
+    &:focus {
+        background-color: darken($brand-color, 20%);
     }
     .upload-btn {
         width: 100%;
