--- a/_includes/product-styles.html
+++ b/_includes/product-styles.html
@@ -14,7 +14,7 @@
 	</div>
 	{% if page.type == 'theme' %}
 	<div class="button flex-button">
-		<a href="{{ site.url }}/demo/{{ page.style }}/?theme={{ page.preview }}" target="blank" class="btn">Demo</a>
+		<a href="{{ site.url }}/demo/{{ page.style }}/?theme={{ page.demo }}" target="blank" class="btn">Demo</a>
 	</div>
 	{% endif %}
 </div>
