--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,6 +60,8 @@
 				<h2>{{ page.hero }}</h2>
 				{% elsif page.name %}
 				<h2>{{ page.name }}</h2>
+				{% elsif page.title %}
+				<h2>{{ page.title }}</h2>
 				{% endif %}
 
 				{% if page.subtitle %}
