--- a/_sass/products.scss
+++ b/_sass/products.scss
@@ -5,7 +5,6 @@
 		}
 	}
 }
-
 .styles {
 	width: 100%;
 	background: #fff;
@@ -14,6 +13,23 @@
 	box-sizing: border-box;
 	border-radius: 3px;
 	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
+
+	.styles {
+        box-shadow: unset;
+        padding: unset;
+
+        .style-picker {
+            position: initial !important;
+		}
+		
+        ~ .product-details {
+            display: initial !important;
+        }
+    }
+
+	.button.flex-button {
+		display: initial;
+	}
 
 	.style-picker {
 		z-index: 2;
@@ -79,6 +95,7 @@
 		width: auto;
 		flex: 1 1 300px;
 		margin-left: 40px;
+		display: initial;
 	}
 
 	.button {
@@ -91,6 +108,51 @@
 		flex: 2 1 500px;
 		text-align: left;
 		margin-left: 40px;
+		box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
+        background-color: #fff;
+		border-radius: 2px;
+		padding: 15px;
+		margin-top: 10px;
+
+		.product-description {
+			flex-basis: 66%;
+			padding: 15px 0px;
+			
+			p {
+				margin: unset;
+			}
+		}
+
+		.product-header {
+            border-radius: 2px 2px 0px 0px;
+            color: #6b6b6b;
+            flex-basis: 8%;
+			border-bottom: 1px solid #cacaca;
+			
+            h3 {
+                text-align: left;
+                margin: unset;
+            }
+		}
+		
+		.button-wrapper {
+            align-content: space-between;
+            align-self: center;
+			display: -webkit-box;
+			
+            .flex-button {
+                flex-basis: 16%;
+				display: flex;
+				
+                a {
+                    margin: 0px 4px 0px 4px;
+				}
+				
+                .btn {
+                    display: -webkit-inline-box;
+                }
+            }
+        }
 
 		h4 {
 			color: $brand-color;
@@ -136,8 +198,10 @@
 		margin: 10px 0 0 0;
 	}
 
-	.product-description p {
-		font-size: 1.1rem;
+	.product-description {
+		p {
+			font-size: 1.1rem;
+		}
 	}
 
 	.snipcart-add-item {
