--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -31,7 +31,7 @@
     flex-direction: column;
 }
 .flex-row {
-    display: flex;
+    display: flex !important;
     flex-direction: row;
 }
 .hero.flex-row {
