--- a/_includes/product-styles.html
+++ b/_includes/product-styles.html
@@ -2,19 +2,21 @@
 	{% for style in include.product.styles %}
 		<div class="style" data-item-id="{{ forloop.index }}" {% unless forloop.first %}style="display: none"{% endunless %}>
 			<a href="{{ include.product.url }}">
-				<img src="{{ style.image }}">
+				<img src="{{ include.product.preview }}">
 			</a>
 		</div>
 	{% endfor %}
-
+			
+	<div class="flex-row">
 	<div class="style-picker">
 		{% for style in include.product.styles %}
-		   <div style="background-color: {{ style.color }}" data-item-id="{{ forloop.index }}"></div>
+		<div style="background-color: {{ style.color }}" data-item-id="{{ forloop.index }}"></div>
 		{% endfor %}
 	</div>
-	{% if page.type == 'theme' %}
+	{% if page.demo %}
 	<div class="button flex-button">
 		<a href="{{ site.url }}/demo/{{ page.style }}/?theme={{ page.demo }}" target="blank" class="btn">Demo</a>
 	</div>
 	{% endif %}
+	</div>
 </div>
