--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -4,7 +4,7 @@ layout: default
 <div class="content">
 	<section class="page">
 		<div class="container">
-			<div class="product-container">
+			<div class="product-container" id="product">
 				{% include product-styles.html product=page %}
 				<div class="product-details" id="add">
 					<div class="product-header">
