--- a/_includes/product-styles.html
+++ b/_includes/product-styles.html
@@ -2,7 +2,7 @@
 	{% for style in include.product.styles %}
 		<div class="style" data-item-id="{{ forloop.index }}" {% unless forloop.first %}style="display: none"{% endunless %}>
 			<a href="{{ include.product.url }}">
-				<img src="{{ include.product.preview }}">
+				<img class="img-preview" src="{{ include.product.preview }}">
 			</a>
 		</div>
 	{% endfor %}
