--- a/_sass/products.scss
+++ b/_sass/products.scss
@@ -238,3 +238,24 @@
 #product .styles {
 	padding: 20px;
 }
+
+#plugins {
+	.styles {
+		.product-details {
+			padding: unset;
+			h4 {
+				margin: 10px 0 0 0;
+				padding-right: 100px;
+				background-color: #339b78;
+				padding: 8px 0px 8px 8px;
+				border-radius: 2px 2px 0px 0px;
+				a {
+					color: #fff;
+				}
+			}
+			.product-description {
+				padding: 0px 8px 8px 8px;
+			}
+		}
+	}
+}
