--- a/_sass/products.scss
+++ b/_sass/products.scss
@@ -204,7 +204,6 @@
 	}
 
 	p {
-		line-height: 1;
 		margin: 10px 0 0 0;
 	}
 
@@ -239,6 +238,35 @@
 	padding: 20px;
 }
 
+#themes, #plugins {
+
+	.button-wrapper {
+		padding: 15px 0px 0px 0px;
+
+		.button {
+
+			a {
+				padding: 5px 20px;
+				font-size: 0.7em;
+				display: -webkit-inline-box;
+				background-color: unset;
+				box-shadow: unset;
+				color: #339b78;
+
+				&:focus {
+					background-color: #e4e4e4;
+				}
+
+				&:first-child {
+					color: #fff;
+					background-color: #339b78;
+					box-shadow: 0px 2px 5px -1px rgba(0, 0, 0, 0.6);
+				}
+			}
+		}
+	}
+}
+
 #plugins {
 	.styles {
 		.product-details {
@@ -254,8 +282,11 @@
 				}
 			}
 			.product-description {
-				padding: 0px 8px 8px 8px;
+				padding: 5px 15px 0px 15px;
 			}
 		}
+	}
+	.button-wrapper {
+		padding: 5px 15px 15px 15px;
 	}
 }
