--- a/_sass/products.scss
+++ b/_sass/products.scss
@@ -252,15 +252,28 @@
 				background-color: unset;
 				box-shadow: unset;
 				color: #339b78;
-
+				
+				&:hover {
+					background-color: #f1f1f1;
+				}
+				
 				&:focus {
-					background-color: #e4e4e4;
+					background-color: #d4d4d4;
 				}
 
 				&:first-child {
 					color: #fff;
-					background-color: #339b78;
+					background-color: $brand-color;
 					box-shadow: 0px 2px 5px -1px rgba(0, 0, 0, 0.6);
+				}
+
+				&:first-child:hover {
+					background-color: darken($brand-color, 10%);
+					box-shadow: 0px 2px 7px 0px rgba(0, 0, 0, 0.6);
+				}
+				&:first-child:focus {
+					background-color: darken($brand-color, 20%);
+					box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.6);
 				}
 			}
 		}
