--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,9 +84,7 @@
 			<ul class="footer-columns">
 				<li class="about">
 					<div class="company-name">{% include logo.html %} <span>{{ site.title }}</span></div>
-					<p class="editable">Many people believe in our themes & plugins because we are the #1 source for them. We have a
-						strong community that have been a great support to this project. Join us on building free themes and plugins for
-						everyone on Discord!</p>
+					<p class="editable">A Discord enhancement project. Free quality Themes and Plugins for Discord and easy installation instructions for BetterDiscord and more!</p>
 				</li>
 
 				<li class="footer-nav">
