--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -4,6 +4,11 @@
 	padding: 0 20px;
 }
 
+.content .container {
+    max-width: 100%;
+    padding: 0 40px;
+}
+
 .text-container {
 	max-width: 750px;
 }
