--- a/_sass/products.scss
+++ b/_sass/products.scss
@@ -14,6 +14,12 @@
 	box-sizing: border-box;
 	border-radius: 3px;
 	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
+	transition: .1s linear transform, .1s linear box-shadow;;
+
+&:hover {
+		transform: translate(0px,-5px);
+		box-shadow: 0px 1px 8px 1px rgba(0, 0, 0, 0.4);
+}
 
 	.style-picker {
 		z-index: 2;
