--- a/_sass/products.scss
+++ b/_sass/products.scss
@@ -73,6 +73,11 @@
 		display: flex;
 		flex-direction: column;
 
+	&:hover {
+		transform: unset;
+		box-shadow: unset;
+	}
+
 		.img-preview {
 			border-radius: 3px 3px 0px 0px;
 		}
