--- a/_sass/products.scss
+++ b/_sass/products.scss
@@ -25,7 +25,7 @@
 		z-index: 2;
 		display: flex;
 		line-height: 0;
-
+/*
 	&::before {
 		content: "";
 		background-image: url("data:image/svg+xml;utf8,<svg class='svg-pallete' width='297' height='297' xmlns='http://www.w3.org/2000/svg'><g><title>background</title><rect fill='none' id='canvas_background' height='402' width='582' y='-1' x='-1'/></g><g><title>Layer 1</title><g id='svg_1'><path fill='#5e5e5e' id='svg_2' d='m254.141,53.244c-29.633,-34.335 -68.842,-53.244 -110.405,-53.244c-35.062,0 -68.197,13.458 -93.302,37.9c-40.051,38.992 -53.256,85.382 -36.227,127.278c13.868,34.122 45.625,57.954 77.227,57.954c0.841,0 1.671,-0.016 2.508,-0.053c4.705,-0.194 9.249,-0.586 13.646,-0.966c5.309,-0.462 10.325,-0.895 14.77,-0.895c10.54,0 19.645,0 19.645,26.846c0,28.811 17.538,48.934 42.65,48.936c0.002,0 0.002,0 0.004,0c17.864,0 37.651,-10.342 57.215,-29.903c25.882,-25.88 43.099,-62.198 47.234,-99.64c4.656,-42.131 -7.763,-82.694 -34.965,-114.213zm-26.826,199.296c-15.397,15.398 -30.55,23.877 -42.66,23.875c-16.288,0 -22.064,-15.274 -22.064,-28.352c0,-32.357 -12.786,-47.43 -40.232,-47.43c-5.333,0 -10.778,0.472 -16.545,0.969c-4.169,0.359 -8.481,0.733 -12.724,0.909c-0.553,0.024 -1.102,0.034 -1.655,0.034c-23.07,0 -47.529,-18.975 -58.156,-45.118c-13.714,-33.738 -2.225,-71.927 31.519,-104.779c21.239,-20.676 49.272,-32.063 78.939,-32.063c35.485,0 69.159,16.373 94.82,46.107c50.63,58.667 34.043,140.564 -11.242,185.848z'/><path fill='#5e5e5e' id='svg_3' d='m192.654,165.877c0,17.213 13.918,31.217 31.026,31.217c17.107,0 31.025,-14.004 31.025,-31.217c0,-17.215 -13.918,-31.219 -31.025,-31.219c-17.108,0 -31.026,14.004 -31.026,31.219zm41.464,0c0,5.861 -4.682,10.633 -10.438,10.633c-5.756,0 -10.438,-4.771 -10.438,-10.633c0,-5.863 4.683,-10.633 10.438,-10.633c5.756,0 10.438,4.77 10.438,10.633z'/><path fill='#5e5e5e' id='svg_4' d='m226.914,93.489c0,-17.215 -13.917,-31.219 -31.025,-31.219c-17.107,0 -31.025,14.004 -31.025,31.219c0,17.211 13.918,31.218 31.025,31.218c17.108,0 31.025,-14.007 31.025,-31.218zm-41.464,0c0,-5.865 4.684,-10.632 10.439,-10.632c5.756,0 10.438,4.767 10.438,10.632c0,5.86 -4.683,10.633 -10.438,10.633c-5.756,0 -10.439,-4.772 -10.439,-10.633z'/><path fill='#5e5e5e' id='svg_5' d='m124.863,39.627c-17.107,0 -31.025,14.004 -31.025,31.217c0,17.213 13.918,31.217 31.025,31.217s31.025,-14.004 31.025,-31.217c0,-17.213 -13.918,-31.217 -31.025,-31.217zm0,41.851c-5.756,0 -10.438,-4.771 -10.438,-10.634c0,-5.863 4.682,-10.633 10.438,-10.633c5.756,0 10.438,4.77 10.438,10.633c-0.001,5.863 -4.682,10.634 -10.438,10.634z'/><path fill='#5e5e5e' id='svg_6' d='m70.821,92.809c-17.107,0 -31.026,14.004 -31.026,31.217c0,17.214 13.919,31.219 31.026,31.219s31.024,-14.005 31.024,-31.219c0,-17.213 -13.917,-31.217 -31.024,-31.217zm0,41.849c-5.757,0 -10.439,-4.77 -10.439,-10.633c0,-5.861 4.683,-10.63 10.439,-10.63c5.755,0 10.438,4.769 10.438,10.63c0,5.864 -4.683,10.633 -10.438,10.633z'/></g><g id='svg_7'/><g id='svg_8'/><g id='svg_9'/><g id='svg_10'/><g id='svg_11'/><g id='svg_12'/><g id='svg_13'/><g id='svg_14'/><g id='svg_15'/><g id='svg_16'/><g id='svg_17'/><g id='svg_18'/><g id='svg_19'/><g id='svg_20'/><g id='svg_21'/></g></svg>");
@@ -38,19 +38,36 @@
     	position: relative;
     	right: 8px;
 	}
-
+*/
 		> div {
-			width: 35px;
-    		height: 25px;
-    		border: unset;
-    		display: inline-block;
-    		margin: unset !important;
-    		cursor: pointer;
-			transition: transform .1s linear;
+			width: 25px;
+			height: 25px;
+			border: unset;
+			display: inline-block;
+			cursor: pointer;
+			transition: transform .1s linear, .2s linear background-color, box-shadow .1s linear;
+			border-radius: 50%;
+			margin-left: 6px;
+			box-shadow: 1px 1px 2px transparent;
+
 			&:hover {
-				transform: scale(1.5);
+				background-color: #b6b6b6 !important;
+				/*transform: scale(1.5);*/
 				box-shadow: 1px 1px 2px rgba(0,0,0,0.3);
 			}
+
+			&:first-child {
+				background-color: #b6b6b6 !important
+			}
+
+			&.first:first-child {
+				background-color: #e6e6e6 !important;
+			}
+
+			&.active, &.first.active {
+				background-color: #b6b6b6 !important;
+			}
+			/*
 			&:nth-child(1) {
 				border-radius: 2px 0px 0px 2px;
 			}
@@ -60,6 +77,7 @@
 			&:only-child {
 				border-radius: 2px;
 			}
+			*/
 		}
 	}
 
@@ -117,6 +135,9 @@
 		flex: 1 1 300px;
 		margin-left: 40px;
 		display: initial;
+		.flex-row {
+			display: flex;
+		}
 	}
 
 	.button {
