--- a/_includes/product-styles.html
+++ b/_includes/product-styles.html
@@ -1,7 +1,7 @@
 <div class="styles">
 	{% for style in include.product.images %}
 		<div class="style" data-item-id="{{ forloop.index }}" {% unless forloop.first %}style="display: none"{% endunless %}>
-			<a href="{{ include.product.url }}">
+			<a href="{{ style.image }}" alt="{{ style.name }}" title="{{ style.name }}">
 				<img alt="{{ style.name }}" title="{{ style.name }}" class="img-preview" src="{{ style.image }}">
 			</a>
 		</div>
