--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -103,6 +103,7 @@
 				</ul>
 			<!-- COPYRIGHT All Rights Reserved &copy; {{ site.time | date: '%Y' }} {{ site.title }}, Inc. Template by <a href="https://cloudcannon.com">CloudCannon</a></p> -->			</div>
 		</footer>
+		{% include lightbox.html %}
 		<script>
 			document.getElementById("open-nav").onclick = function () {
 				document.body.classList.toggle("nav-open");
