--- a/_sass/products.scss
+++ b/_sass/products.scss
@@ -114,7 +114,27 @@
         ~ .product-details {
 			display: flex;
 			flex-direction: column;
-        }
+		}
+		a {
+			&::before {
+				visibility: hidden;
+				transition: .2s linear background-color , 1s linear transform;
+				transform: scale(1.2);
+			}
+			&:hover::before {
+				content: "";
+				visibility: visible;
+				position: absolute;
+				width: 100%;
+				background: rgba(0, 0, 0, 0.6);
+				height: 97%;
+				background-image: url(https://i.imgur.com/HPMP0Qw.png);
+				background-repeat: no-repeat;
+				background-position: center;
+				background-size: 15%;
+				transform: scale(1);
+			}
+		}
     }
 
 	.button.flex-button {
